pull out pydub into standalone module pydub-swing When embedding the package, unused files should be removed

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,3 +39,7 @@ dependencies = [
 dev = [
     "pyinstaller==6.12.0",
 ]
+
+[tool.setuptools.package-dir]
+"swingmusic" = "swingmusic"
+"pydub_swing" = "pydub"
