cleanup requirements.txt remove unused import in audio_segment.py add entrypoint.sh for appimage support update pyproject.toml for optional dependencies add appimage to github workflow

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,9 +37,13 @@ dependencies = [
     "rapidfuzz==3.11.0",
     "pendulum>=3.0.0",
     "pystray>=0.19.5",
-    "pyinstaller==6.12.0",
     "waitress>=3.0.2; sys_platform == 'win32'",
     "bjoern >=3.2.2; sys_platform != 'win32'"
+]
+
+[project.optional-dependencies]
+build = [
+    "pyinstaller"
 ]
 
 [tool.uv]
