--- a/requirements.txt
+++ b/requirements.txt
@@ -1,61 +1,27 @@
-altgraph==0.17.4
-annotated-types==0.7.0
-blinker==1.9.0
-brotli==1.1.0
-certifi==2025.1.31
-charset-normalizer==3.4.1
-colorgram-py==1.2.0
-configargparse==1.7
-ffmpeg-python==0.2.0
-flask==3.1.0
-flask-compress==1.17
-flask-cors==5.0.1
-flask-jwt-extended==4.7.1
-flask-login==0.6.3
+pillow>=11.1.0
+Flask>=3.1.0
+Flask-Cors>=3.0.10
+requests>=2.27.1
+colorgram.py>=1.2.0
+tqdm>=4.65.0
+tinytag>=2.1.1
+Unidecode>=1.3.6
+psutil>=5.9.4
+show-in-file-manager>=1.1.4
+flask-compress>=1.13
+tabulate>=0.9.0
+setproctitle>=1.3.2
+locust>=2.20.1
+watchdog>=4.0.0
+flask-jwt-extended>=4.6.0
+sqlalchemy>=2.0.31
+memory-profiler>=0.61.0
+sortedcontainers>=2.4.0
+xxhash>=3.4.1
+ffmpeg-python>=0.2.0
+schedule>=1.2.2
 flask-openapi3==3.0.2
-future==1.0.0
-gevent==24.11.1
-geventhttpclient==2.3.3
-greenlet==3.1.1
-idna==3.10
-itsdangerous==2.2.0
-jinja2==3.1.5
-locust==2.32.10
-markupsafe==3.0.2
-memory-profiler==0.61.0
-msgpack==1.1.0
-packaging==24.2
-pendulum==3.0.0
-pillow==11.1.0
-psutil==7.0.0
-pydantic==2.10.6
-pydantic-core==2.27.2
-pyinstaller==6.12.0
-pyinstaller-hooks-contrib==2025.1
-pyjwt==2.10.1
-python-dateutil==2.9.0.post0
-pyxdg==0.28
-pyzmq==26.2.1
 rapidfuzz==3.11.0
-requests==2.32.3
-schedule==1.2.2
-setproctitle==1.3.5
-setuptools==75.8.0
-show-in-file-manager==1.1.5
-six==1.17.0
-sortedcontainers==2.4.0
-sqlalchemy==2.0.38
-tabulate==0.9.0
-time-machine==2.16.0
-tinytag==2.1.0
-tqdm==4.67.1
-typing-extensions==4.12.2
-tzdata==2025.1
-unidecode==1.3.8
-urllib3==2.3.0
-watchdog==6.0.0
-werkzeug==3.1.3
-xxhash==3.5.0
-zope-event==5.0
-zope-interface==7.2
-zstandard==0.23.0
+pendulum>=3.0.0
+pystray>=0.19.5
+bjoern >=3.2.2
