--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -88,7 +88,7 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
-          path: *.AppImage
+          path: ./*.AppImage
           compression-level: 0
           name: 'appimage'
 
