--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,6 +80,11 @@ jobs:
         with:
           python-version: '3.11'
 
+      - name: Install libev (Linux)
+        if: ${{ startsWith(matrix.os, 'ubuntu') }}
+        run: |
+          sudo apt-get install libev-dev -y > /dev/null
+
       - name: Install appimage builder
         run: pip install python-appimage
 
