--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -97,6 +97,47 @@ jobs:
   #        compression-level: 0
   #        name: 'appimage'
 
+  docker:
+    name: Build and push Docker image
+    runs-on: ubuntu-latest
+    needs: [build-client, build-wheels]
+    permissions: write-all
+
+    steps:
+      - name: Checkout into repo
+        uses: actions/checkout@v3
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to GHCR
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Docker meta
+        id: meta # you'll use this in the next step
+        uses: docker/metadata-action@v3
+        with:
+          # list of Docker images to use as base name for tags
+          images: |
+            ghcr.io/${{ github.repository }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          platforms: linux/amd64, linux/arm64 #,linux/arm
+          push: true
+          tags: ghcr.io/${{github.repository}}:${{format('v{0}', github.ref_name)}}, ghcr.io/${{github.repository}}:latest
+          labels: org.opencontainers.image.title=Docker
+
   build-pyinstaller:
     name: Build binary on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
