--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,11 +74,6 @@ jobs:
     needs: [ build-client ]
 
     steps:
-      - name: Checkout swingmusic
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
       - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
@@ -107,8 +102,8 @@ jobs:
       - name: Build appimage
         run: |
           python-appimage build app -p 3.11 appimage/ -x . -n swingmusic --no-packaging
-          pip install --target swingmusic-x86_64/opt/python3.11/ --no-deps .
-          ./appimagetool-x86_64.AppImage --no-appstream swingmusic-x86_64/ swingmusic-${{github.ref_name}}-x86_64.AppImage
+          pip install --target "swingmusic-x86_64/opt/python3.11/lib/python3.11/" --no-deps --find-links=wheels/ swingmusic
+          ./appimagetool-x86_64.AppImage --no-appstream "swingmusic-x86_64/" "swingmusic-${{github.ref_name}}-x86_64.AppImage"
 
       - uses: actions/upload-artifact@v4
         with:
