--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,13 +78,6 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Checkout swingmusic
-        uses: actions/checkout@v5
-        with:
-          fetch-depth: 0
-          sparse-checkout: appimage
-          path: swing
-
       - name: Install linux dependencies
         run: sudo apt-get install libev-dev libfuse-dev -y > /dev/null
 
@@ -93,6 +86,12 @@ jobs:
           pip install python-appimage
           wget -nv -c https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-x86_64.AppImage
           chmod +x appimagetool-x86_64.AppImage
+
+      - name: Checkout swingmusic
+        uses: actions/checkout@v5
+        with:
+          fetch-depth: 0
+          sparse-checkout: appimage
 
       - name: Download client artifact
         uses: actions/download-artifact@v4
@@ -105,6 +104,11 @@ jobs:
         with:
           name: wheels
           path: wheels
+
+      - name: Debug
+        run: |
+          sudo apt-get install tree -y > /dev/null
+          tree
 
       - name: Build appimage
         run: |
