Another fix for path in appimage build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -107,10 +107,10 @@ jobs:
 
       - name: Build appimage
         run: |
-          python-appimage build app -p 3.11 appimage/ -n "appimage-x86_64" --no-packaging
-          pip install --target "appimage-x86_64/opt/python3.11/lib/python3.11/" --no-deps --find-links=wheels/ swingmusic
+          python-appimage build app -p 3.11 appimage/ -n "swingmusic-x86_64" --no-packaging
+          pip install --target "swingmusic-x86_64/opt/python3.11/lib/python3.11/" --no-deps --find-links=wheels/ swingmusic
           ls
-          ./appimagetool-x86_64.AppImage --no-appstream "appimage-x86_64/" "swingmusic-${{github.ref_name}}-x86_64.AppImage"
+          ./appimagetool-x86_64.AppImage --no-appstream "swingmusic-x86_64" "swingmusic-${{github.ref_name}}-x86_64.AppImage"
 
       - uses: actions/upload-artifact@v4
         with:
