fix typo in build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -93,7 +93,7 @@ jobs:
           sparse-checkout: appimage
       - name: Set architecture-specific variables
         run: |
-          if: ${{ endsWith(matrix.os, 'arm') }}; then
+          if ${{ endsWith(matrix.os, 'arm') }}; then
             echo "APPIMAGE_ARCH=aarch64" >> $GITHUB_ENV
           else
             echo "APPIMAGE_ARCH=${{ matrix.arch }}" >> $GITHUB_ENV
