--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,49 +1,16 @@
-name: New Release (v2)
-run-name: Release v${{ github.event.inputs.tag }}
+name: Build and Upload
 on:
   workflow_dispatch:
-    inputs:
-      tag:
-        description: "Version number"
-        required: true
-        default: "0.0.0"
-      binary_build:
-        description: "Build binaries"
-        required: true
-        default: "true"
-        type: choice
-        options:
-          - true
-          - false
-      is_latest:
-        description: "Set as latest"
-        required: true
-        default: "false"
-        type: choice
-        options:
-          - true
-          - false
-      build_docker:
-        description: "Build Docker image"
-        required: true
-        type: choice
-        default: "false"
-        options:
-          - true
-          - false
-      publish_pypi:
-        description: "Publish to PyPI"
-        required: true
-        type: choice
-        default: "false"
-        options:
-          - true
-          - false
+  release:
+    types:
+      - prereleased
+      - released
 
 env:
   PIP_USE_PEP517: true
 
 jobs:
+
   build-client:
     runs-on: ubuntu-latest
     name: Build client
@@ -51,7 +18,7 @@ jobs:
       - name: Clone client
         uses: actions/checkout@v4
         with:
-          repository: "swingmx/webclient"
+          repository: 'swingmx/webclient'
           path: swingmusic-client
 
       - name: Setup Node 20
@@ -75,12 +42,11 @@ jobs:
         with:
           path: "client/"
           compression-level: 0
-          name: "client"
+          name: 'client'
 
   build-wheels:
     name: Build wheels
     runs-on: ubuntu-latest
-    needs: [build-client]
 
     steps:
       - name: Checkout swingmusic
@@ -88,25 +54,9 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Download client artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: client
-          path: client
-
-      - name: Compress client and copy to src/swingmusic/client.zip
-        run: |
-          zip -r client.zip client
-          rm -r client
-          cp client.zip src/swingmusic/client.zip
-
       - uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
-
-      - name: Create git tag
-        run: |
-          git tag v${{ github.event.inputs.tag }}
+          python-version: '3.11'
 
       - name: Build wheels
         run: pip wheel . -w wheelhouse --no-deps
@@ -116,23 +66,22 @@ jobs:
           # name: cibw-wheels-${{ matrix.os }}-${{ strategy.job-index }}
           path: ./wheelhouse/*.whl
           compression-level: 0
-          name: "wheels"
+          name: 'wheels'
 
   build-appimage:
     name: Build Appimage
     runs-on: ${{ matrix.os }}
-    needs: [build-client]
-    if: ${{ github.event.inputs.binary_build == 'true' }}
+    needs: [ build-client ]
 
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, ubuntu-24.04-arm]
+        os: [ ubuntu-latest, ubuntu-24.04-arm]
 
     steps:
       - uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: '3.11'
 
       - name: Install linux dependencies
         run: sudo apt-get install libev-dev libfuse-dev -y > /dev/null
@@ -174,7 +123,7 @@ jobs:
         run: |
           python-appimage build app -p 3.11 appimage/ -n "swingmusic-$APPIMAGE_ARCH" -x client --no-packaging
           pip install --target "swingmusic-$APPIMAGE_ARCH/opt/python3.11/lib/python3.11/" --no-deps --find-links=wheels/ swingmusic
-          ./appimagetool-$APPIMAGE_ARCH.AppImage --no-appstream "swingmusic-$APPIMAGE_ARCH" "swingmusic-v${{inputs.tag}}-$APPIMAGE_ARCH.AppImage"
+          ./appimagetool-$APPIMAGE_ARCH.AppImage --no-appstream "swingmusic-$APPIMAGE_ARCH" "swingmusic-${{github.ref_name}}-$APPIMAGE_ARCH.AppImage"
 
       - uses: actions/upload-artifact@v4
         with:
@@ -185,9 +134,8 @@ jobs:
   docker:
     name: Build and push Docker image
     runs-on: ubuntu-latest
-    needs: [build-client, build-wheels]
+    needs: [ build-client, build-wheels ]
     permissions: write-all
-    if: ${{ github.event.inputs.build_docker == 'true' }}
 
     steps:
       - name: Checkout into repo
@@ -218,33 +166,32 @@ jobs:
           images: |
             ghcr.io/${{ github.repository }}
 
+      - name: Determine if image should be uploaded
+        run: |
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            echo "UPLOAD=false" >> $GITHUB_ENV
+          else
+            echo "UPLOAD=true" >> $GITHUB_ENV
+          fi
+
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
           context: .
           platforms: linux/amd64, linux/arm64 #,linux/arm
-          push: true
+          push: ${{ env.UPLOAD }}
           tags: ghcr.io/${{github.repository}}:${{format('{0}', github.ref_name)}}, ghcr.io/${{github.repository}}:latest
           labels: org.opencontainers.image.title=Docker
 
   build-pyinstaller:
     name: Build binary on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
-    needs: [build-client, build-wheels]
-    if: ${{ github.event.inputs.binary_build == 'true' }}
+    needs: [ build-client, build-wheels ]
 
     strategy:
       fail-fast: false
       matrix:
-        os:
-          [
-            ubuntu-latest,
-            ubuntu-24.04-arm,
-            windows-latest,
-            windows-11-arm,
-            macos-13,
-            macos-latest,
-          ]
+        os: [ ubuntu-latest, ubuntu-24.04-arm, windows-latest, windows-11-arm, macos-13, macos-latest ]
 
     steps:
       - name: Checkout swingmusic
@@ -264,16 +211,6 @@ jobs:
         with:
           name: client
           path: client
-
-      - name: Compress client (Unix)
-        if: runner.os != 'Windows'
-        run: |
-          zip -r client.zip client
-
-      - name: Compress client (Windows)
-        if: runner.os == 'Windows'
-        run: |
-          Compress-Archive -Path client -DestinationPath client.zip -Force
 
       - name: Download wheel artifact
         uses: actions/download-artifact@v4
@@ -314,15 +251,9 @@ jobs:
   upload-builds:
     name: Uploading builds to release
     runs-on: ubuntu-latest
-    needs: [build-client, build-wheels, build-pyinstaller, build-appimage]
+    needs: [ build-client, build-wheels, build-pyinstaller, build-appimage ]
 
     steps:
-      - name: Checkout swingmusic
-        uses: actions/checkout@v4
-        with:
-          sparse-checkout: |
-            .github/changelog.md
-
       - name: Download client artifact
         uses: actions/download-artifact@v4
         with:
@@ -355,37 +286,20 @@ jobs:
           path: appimage
           merge-multiple: true
 
-      - name: Upload artifacts to GitHub Release
-        uses: ncipollo/release-action@v1
-        with:
-          allowUpdates: true
-          draft: true
-          name: ${{ format('v{0}',github.event.inputs.tag) }}
-          tag: ${{ format('v{0}',github.event.inputs.tag) }}
-          bodyFile: .github/changelog.md
-          artifactErrorsFailBuild: true
-          commit: ${{ github.sha }}
-          makeLatest: ${{github.event.inputs.is_latest == 'true'}}
-          artifacts: "client.zip,wheels/*,pyinstaller/*,appimage/*"
-          token: ${{ secrets.PAT }}
+      - name: Determine if current run is draft
+        run: |
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            echo "DRAFT=true" >> $GITHUB_ENV
+          else
+            echo "DRAFT=false" >> $GITHUB_ENV
+          fi
 
-  publish-pypi:
-    name: Publish to PyPI
-    runs-on: ubuntu-latest
-    needs: [build-wheels]
-    if: ${{ github.event.inputs.publish_pypi == 'true' }}
-    permissions:
-      id-token: write
-    
-    steps:
-      - name: Download wheel artifacts
-        uses: actions/download-artifact@v4
+      - name: Upload artifacts to GitHub Release
+        uses: softprops/action-gh-release@v2
         with:
-          name: wheels
-          path: dist
-          merge-multiple: true
-      
-      - name: Publish to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          verbose: true
+          draft: ${{ env.DRAFT }}
+          files: |
+            client.zip
+            wheels/**
+            pyinstaller/**
+            appimage/**
