--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -179,7 +179,7 @@ jobs:
         with:
           context: .
           platforms: linux/amd64, linux/arm64 #,linux/arm
-          push: ${{ env.UPLOAD }}
+          push: true #${{ env.UPLOAD }}
           tags: ghcr.io/${{github.repository}}:${{format('{0}', github.ref_name)}}, ghcr.io/${{github.repository}}:latest
           labels: org.opencontainers.image.title=Docker
 
